--- a/bp/index.html
+++ b/bp/index.html
@@ -188,6 +188,10 @@ a {
 table {
 	border-collapse: collapse;
 }
+tr {
+	scroll-margin-top: 45vh;
+	scroll-margin-bottom: 40vh;
+}
 td {
 	padding: .7em .5em;
 	border: 3px solid transparent;
@@ -201,6 +205,15 @@ td:last-child {
 }
 td:nth-child(2) {
 	white-space: nowrap;
+}
+tr.hil td {
+	animation: hil 1s ease-out;
+	filter: brightness(1);
+}
+@keyframes hil {
+	15% {filter:brightness(1); border-color: #fff}
+	25% {filter:brightness(3); border-color: #fff; color: #fff}
+	100% {filter:brightness(1)}
 }
 #tb tr:hover td {
 	border-color: #fff;
@@ -325,7 +338,7 @@ div.center>div {
 .sc6 td, .modal a.sc6 { background: hsl(  0,40%,30%); }
 .sc7 td, .modal a.sc7 { background: hsl( 35,70%,30%); color: #fff }
 .sc8 td, .modal a.sc8 { background: hsl( 90,70%,30%); color: #fff }
-.sc9 td, .modal a.sc9 { background: #fff; color: #000 }
+.sc9 td, .modal a.sc9 { background: hsl(180,70%,40%); color: #fff; text-shadow: 0 0 2px #000 }
 x.sc8 td { background: hsl(270,40%,40%); color: #fff }
 x.sc9 td { background: hsl( 90,70%,30%); color: #fff }
 #addctxscore>a.act {
@@ -785,7 +798,7 @@ var sc_col = {
 	"6": "hsl(  0,40%,30%)",
 	"7": "hsl( 35,70%,30%)",
 	"8": "hsl( 90,70%,30%)",
-	"9": "#fff"
+	"9": "hsl(180,70%,40%)"
 };
 var sc_fcol = {
 	"-": "#351",
@@ -797,7 +810,7 @@ var sc_fcol = {
 	"6": "hsl(  0,40%,50%)",
 	"7": "hsl( 35,70%,50%)",
 	"8": "hsl( 90,70%,50%)",
-	"9": "#444"
+	"9": "#fff"
 }
 
 var BOOTHS = [];
@@ -1359,6 +1372,7 @@ function ev_dload() {
 
 var scroll_obj = null;
 var scroll_pos = [0,0];
+var scroll_booth = null;
 function get_scroll_offset() {
 	var o1 = document.getElementsByTagName('html')[0];
 	var o2 = document.body;
@@ -1390,7 +1404,7 @@ function persist_scroll() {
 	
 	scroll_pos[idx] = get_scroll_offset();
 }
-function restore_scroll() {
+function restore_scroll(new_view) {
 	var idx =
 		active_tab == 'tbmenu_chk' ? 0 :
 		active_tab == 'tbmenu_row' ? 1 : -1;
@@ -1398,8 +1412,24 @@ function restore_scroll() {
 	if (idx < 0)
 		return;
 
-	if (scroll_obj !== null)
-		scroll_obj.scrollTop = scroll_pos[idx];
+	try {
+		if (!new_view)
+			throw 1;
+		
+		var ofs = scroll_pos[idx],
+			el = ebi('c' + scroll_booth);
+
+		scroll_booth = null;
+		
+		if (ofs)
+			scroll_obj.scrollTop = ofs;
+		else
+			el.scrollIntoView();
+
+		el.classList.add('hil');
+		setTimeout(function() {el.classList.remove('hil')}, 1000);
+	}
+	catch (ex) {}
 }
 
 function refresh() {
@@ -2616,7 +2646,7 @@ function ev_resize(e) {
 }
 function ev_cancel(e) {
 	hide_modals(e);
-	restore_scroll();
+	restore_scroll(true);
 	
 	var backto = this.getAttribute('goto');
 	if (backto != null)
@@ -2698,6 +2728,7 @@ function open_addctx(loc) {
 	}
 
 	drawpic(loc);
+	scroll_booth = loc;
 
 	ebi('ladd_kan').textContent = tday['kan']
 	ebi('ladd_rom').textContent = tday['rom']
