--- a/bp/index.html
+++ b/bp/index.html
@@ -791,10 +791,10 @@ var ROWS = [  // wall first, then right-to-left
 ];
 var sc_col = {
 	"-": "#000",
-	"1": "#222",
-	"2": "#111",
-	"3": "#111",
-	"4": "#111",
+	"1": "rgba(255,255,255,0.2)",
+	"2": "rgba(255,255,255,0.1)",
+	"3": "rgba(255,255,255,0.1)",
+	"4": "rgba(255,255,255,0.1)",
 	"5": "hsl(240,20%,20%)",
 	"6": "hsl(  0,40%,30%)",
 	"7": "hsl( 35,70%,30%)",
@@ -2644,7 +2644,7 @@ function ev_savecan(e) {
 		a = document.createElement('a');
 	
 	a.setAttribute('href', u);
-	a.setAttribute('download', '');
+	a.setAttribute('download', 'c101-' + active_map + '.png');
 	a.click();
 	
 	show_map(active_map);
