--- a/bp/index.html
+++ b/bp/index.html
@@ -498,7 +498,7 @@ h3 {
 			<!-- will be automatically populated with a cell jumplist which fits the device screen -->
 		</div>
 		<div id="tabh_txt" class="viewctl"
-			><input id="trow_in" value="paste here" sample="paste here"
+			><input id="trow_in" placeholder="paste here"
 			><input id="trow_out" value="parser out"
 			></div>
 		
@@ -591,7 +591,7 @@ h3 {
 
 	<div id="addctxlinks"></div>
 	<div id="addctxqnote">
-		<input id="tqnote" value="paste stuff here" sample="paste stuff here" />
+		<input id="tqnote" placeholder="paste stuff here" />
 		<a href="#" id="bqnote">Add URL/note</a>
 	</div>
 	<div class="center"><div id="addctx_exit_act">
@@ -2107,7 +2107,7 @@ function ev_trowin_input(e) {
 		// var LF = 'ａｂｃｄｅｆｇｈｉｊｋｌｍｎｏｐｑｒｓｔｕｖｗｘｙｚ';
 		
 		var find =
-			tl(m[1], UH+LH+LF, UF+UF+UF) +
+			tl(m[1], LH+LF+UF, UH+UH+UH) +
 			tl(m[2], DF, DH) +
 			tl(m[3], UH+UF+LF, LH+LH+LH);
 		
