maybe fix ios textinput zoom

--- a/bp/index.html
+++ b/bp/index.html
@@ -18,6 +18,9 @@ html, body {
 	font-family: sans-serif;
 	touch-action: manipulation;
 }
+input {
+	font-size: 1em;
+}
 #tabh_txt input {
 	color: #fc7;
 }
