include day in png filenames

--- a/bp/index.html
+++ b/bp/index.html
@@ -2658,7 +2658,7 @@ function ev_savecan(e) {
 		a = document.createElement('a');
 	
 	a.setAttribute('href', u);
-	a.setAttribute('download', 'c101-' + active_map + '.png');
+	a.setAttribute('download', 'c101-' + active_day + active_map + '.png');
 	a.click();
 	
 	show_map(active_map);
