update help page

--- a/bp/bp-readme/index.html
+++ b/bp/bp-readme/index.html
@@ -37,7 +37,7 @@ this document is regarding <a href="https://ocv.me/bp/101/">battleplan</a>
 </ul>
 <h1>running bp offline (for Android)</h1><ul>
 
-<li>install <a href="https://termux.com/">termux</a></li>
+<li>install <a href="https://termux.com/">termux</a> from <a href="https://f-droid.org/">f-droid</a>, <strong>not from the playstore</strong></li>
 
 <li>to either install or upgrade your offline bp installation, paste the following into your terminal and hit enter:<br /><code>pkg install -y wget; wget -qO- https://ocv.me/bp/101/bp-android.sh | bash</code></li>
 
