fix backing out of notes editor

--- a/bp/index.html
+++ b/bp/index.html
@@ -2851,7 +2851,7 @@ function ev_cancel(e) {
 	var backto = this.getAttribute('goto');
 	
 	if (backto == 'vurls' && quickedit)
-		backto = 'open_addctx';  // http://ocv.me/good.jpg
+		backto = 'addctx';  // http://ocv.me/good.jpg
 
 	if (backto != null)
 		show(backto);
